# archprobe4android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/mobi/eis/archprobe4android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/mobi/eis/archprobe4android/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/mobi/eis/archprobe4android/: ExampleUnitTest.java
archprobe/: build.gradle
archprobe/src/androidTest/java/mobi/eis/archprobe/: ExampleInstrumentedTest.java
archprobe/src/main/cpp/: CMakeLists.txt
archprobe/src/main/cpp/apps/: CMakeLists.txt
archprobe/src/main/cpp/apps/archprobe/: CMakeLists.txt  app.cpp
archprobe/src/main/cpp/include/: util.hpp
archprobe/src/main/cpp/src/: util.cpp
archprobe/src/main/java/mobi/eis/archprobe/: NativeLib.java
archprobe/src/test/java/mobi/eis/archprobe/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
